Added api doc for showing and creating a single blog post
